--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
+        <!--设置Thymeleaf版本-->
+        <springboot-thymeleaf.version>3.0.2.RELEASE</springboot-thymeleaf.version>
+        <thymeleaf-layout-dialect.version>2.4.3</thymeleaf-layout-dialect.version>
     </properties>
 
     <dependencies>
@@ -58,6 +61,12 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+
+        <!-- Thymeleaf依赖 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -80,7 +89,6 @@
                     </dependency>
                 </dependencies>
             </plugin>
-
         </plugins>
     </build>
 
