--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.datasource.url=jdbc:mysql://10.88.77\
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=h0K0_8u
+
+
+#Thymeleaf的配置:开启模板缓存（默认值：true）
+spring.thymeleaf.cache=false
