--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 # 配置数据源
 spring.datasource.url=jdbc:mysql://10.88.77\
   .65:33061/cl_test?serverTimezone=Asia/Shanghai&zeroDateTimeBehavior\
@@ -7,6 +6,25 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=h0K0_8u
 
-
 #Thymeleaf的配置:开启模板缓存（默认值：true）
 spring.thymeleaf.cache=false
+
+logging.level.com.example.demo.Mapper=debug
+
+
+# Redis数据库索引（默认为0）
+spring.redis.database=0
+# Redis服务器地址
+spring.redis.host=localhost
+# Redis服务器连接端口
+spring.redis.port=6379
+# 连接池最大连接数（使用负值表示没有限制）
+spring.redis.jedis.pool.max-active=8
+# 连接池中的最大空闲连接
+spring.redis.jedis.pool.max-idle=8
+# 连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.jedis.pool.max-wait=-1
+# 连接池中的最小空闲连接
+spring.redis.jedis.pool.min-idle=0
+# 连接超时时间（毫秒）
+spring.redis.timeout=0
