使用Spring Boot发送邮件

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,15 @@ spring.redis.jedis.pool.max-wait=-1
 spring.redis.jedis.pool.min-idle=0
 # 连接超时时间（毫秒）
 spring.redis.timeout=0
+
+
+#邮件
+spring.mail.host = smtp.163.com
+#邮件账号
+spring.mail.username = cling0118@163.com
+#邮件密码
+spring.mail.password = TMIPMTVSYOHIYBGB
+spring.mail.properties.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.properties.mail.smtp.starttls.required = true
+
