--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,12 @@
 <!--            <version>3.0.0</version>-->
 <!--        </dependency>-->
 
+        <!-- 发送邮件 mail依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
