--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,3 +40,14 @@ spring.mail.properties.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
 spring.mail.properties.mail.smtp.starttls.required = true
 
+#Actuator监控
+#management.server.port= 1001
+#启动所有端点
+#Actuator 默认只开放 health 和 info 两个端点
+management.endpoints.enabled-by-default=true
+#启动所有端点
+management.endpoints.web.exposure.include=*
+#自定义管理端点路径
+management.endpoints.web.base-path=/monitor
+#启用接口关闭Spring Boot应用的功能
+management.endpoint.shutdown.enabled=true
