--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,3 +51,11 @@ management.endpoints.web.exposure.include=*
 management.endpoints.web.base-path=/monitor
 #启用接口关闭Spring Boot应用的功能
 management.endpoint.shutdown.enabled=true
+
+#日志文件输出
+#logging.file.path= ./log
+#com.example.demo.controller包下的所有class以DEBUG级别输出
+#logging.level.com.example.demo.controller = DEBUG
+
+#自定义日志配置
+logging.config=classpath:logback-spring.xml
