--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,21 @@
                     <fork>true</fork><!--必须添加这个配置-->
                 </configuration>
             </plugin>
+
+            <!--解决maven install报错问题-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.7</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.shared</groupId>
+                        <artifactId>maven-filtering</artifactId>
+                        <version>1.3</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+
         </plugins>
     </build>
 
